--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
   <title>Vue Test</title>
 </head>
 <body>
